name:                   greskell
version:                2.0.3.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Haskell binding for Gremlin graph query language
description:            Haskell binding for [Gremlin graph query language](http://tinkerpop.apache.org/gremlin.html).
                        See [README.md](https://github.com/debug-ito/greskell/blob/master/README.md) for detail.
                        .
                        This package is the main entry point of greskell family.
                        It re-exports [greskell-core](http://hackage.haskell.org/package/greskell-core) package,
                        and adds some useful functions to it.
category:               Data
cabal-version:          2.0
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/graphson/*.json
homepage:               https://github.com/debug-ito/greskell/
bug-reports:            https://github.com/debug-ito/greskell/issues/

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, GeneralizedNewtypeDeriving,
                        FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, TypeFamilies,
                        GADTs, DeriveTraversable, DeriveGeneric, StandaloneDeriving
  exposed-modules:      Data.Greskell,
                        Data.Greskell.Gremlin,
                        Data.Greskell.Binder,
                        Data.Greskell.Graph,
                        Data.Greskell.Graph.PropertyMap,
                        Data.Greskell.GTraversal,
                        Data.Greskell.GTraversal.Gen,
                        Data.Greskell.AsLabel,
                        Data.Greskell.Extra,
                        Data.Greskell.PMap,
                        Data.Greskell.NonEmptyLike,
                        Data.Greskell.Logic
  -- other-modules:        
  build-depends:        base,
                        greskell-core,
                        text,
                        transformers,
                        aeson,
                        unordered-containers,
                        semigroups,
                        vector,
                        exceptions,
                        hashable

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports -fno-warn-deprecations "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  other-modules:        Data.Greskell.BinderSpec,
                        Data.Greskell.GTraversalSpec,
                        Data.Greskell.GremlinSpec,
                        Data.Greskell.GraphSpec,
                        Data.Greskell.Graph.PropertyMapSpec,
                        Data.Greskell.ExtraSpec,
                        Data.Greskell.PMapSpec,
                        Data.Greskell.LogicSpec,
                        ExamplesSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base, text, aeson, unordered-containers,
                        greskell, greskell-core,
                        hspec,
                        bytestring

test-suite typecheck-test-suite
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Typecheck.hs
  build-depends:        base, hspec,
                        greskell,
                        should-not-typecheck

flag server-test
  description: Do tests with Gremlin Server.
  default: False

test-suite server-test-suite
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ServerTest.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings, TypeFamilies
  other-modules:        ServerTest.Common
  if flag(server-test)
    -- Explicitly remove dependency. See https://github.com/haskell/cabal/issues/1725
    build-depends:        base, aeson, hspec, text, unordered-containers, vector,
                          greskell, greskell-core,
                          scientific,
                          greskell-websocket,
                          safe-exceptions
  else
    buildable: False


flag server-behavior-test
  description: Tests about the behavior of Gremlin Server, rather than greskell.
               Note that this test clears the content of the Gremlin Server.
  default: False
  manual: True

test-suite server-behavior-test-suite
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ServerBehaviorTest.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  other-modules:        ServerTest.Common
  if flag(server-behavior-test)
    build-depends:        base, aeson, hspec, text, unordered-containers, vector,
                          greskell, greskell-core,
                          scientific,
                          greskell-websocket,
                          safe-exceptions
  else
    buildable: False


source-repository head
  type:                 git
  location:             https://github.com/debug-ito/greskell.git
