name:                   greskell
version:                2.0.3.1
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Haskell binding for Gremlin graph query language
description:            Haskell binding for [Gremlin graph query language](http://tinkerpop.apache.org/gremlin.html).
                        See [README.md](https://github.com/debug-ito/greskell/blob/master/README.md) for detail.
                        .
                        This package is the main entry point of greskell family.
                        It re-exports [greskell-core](http://hackage.haskell.org/package/greskell-core) package,
                        and adds some useful functions to it.
category:               Data
cabal-version:          2.0
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/graphson/*.json
homepage:               https://github.com/debug-ito/greskell/
bug-reports:            https://github.com/debug-ito/greskell/issues/

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, GeneralizedNewtypeDeriving,
                        FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, TypeFamilies,
                        GADTs, DeriveTraversable, DeriveGeneric, StandaloneDeriving
  exposed-modules:      Data.Greskell,
                        Data.Greskell.Gremlin,
                        Data.Greskell.Binder,
                        Data.Greskell.Graph,
                        Data.Greskell.Graph.PropertyMap,
                        Data.Greskell.GTraversal,
                        Data.Greskell.GTraversal.Gen,
                        Data.Greskell.AsLabel,
                        Data.Greskell.Extra,
                        Data.Greskell.PMap,
                        Data.Greskell.NonEmptyLike,
                        Data.Greskell.Logic
  -- other-modules:        
  build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                        greskell-core ^>=1.0.0,
                        text ^>=1.2.3 || ^>=2.0.2 || ^>=2.1,
                        transformers ^>=0.5.6 || ^>=0.6.1,
                        aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                        unordered-containers ^>=0.2.15,
                        semigroups ^>=0.20,
                        vector ^>=0.12.3 || ^>=0.13.0,
                        exceptions ^>=0.10.4,
                        hashable ^>=1.4.0

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports -fno-warn-deprecations "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  other-modules:        Data.Greskell.BinderSpec,
                        Data.Greskell.GTraversalSpec,
                        Data.Greskell.GremlinSpec,
                        Data.Greskell.GraphSpec,
                        Data.Greskell.Graph.PropertyMapSpec,
                        Data.Greskell.ExtraSpec,
                        Data.Greskell.PMapSpec,
                        Data.Greskell.LogicSpec,
                        ExamplesSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                        text ^>=1.2.3 || ^>=2.0.2 || ^>=2.1,
                        aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                        unordered-containers ^>=0.2.15,
                        greskell,
                        greskell-core ^>=1.0.0,
                        hspec ^>=2.9.1 || ^>=2.10.6 || ^>=2.11.9,
                        bytestring ^>=0.10.9 || ^>=0.11.3 || ^>=0.12.0

test-suite typecheck-test-suite
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Typecheck.hs
  build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                        hspec ^>=2.9.1 || ^>=2.10.6 || ^>=2.11.9,
                        greskell,
                        should-not-typecheck ^>=2.1.0

flag server-test
  description: Do tests with Gremlin Server.
  default: False

test-suite server-test-suite
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ServerTest.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings, TypeFamilies
  other-modules:        ServerTest.Common
  if flag(server-test)
    -- Explicitly remove dependency. See https://github.com/haskell/cabal/issues/1725
    build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                          aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                          hspec ^>=2.9.1 || ^>=2.10.6 || ^>=2.11.9,
                          text ^>=1.2.3 || ^>=2.0.2 || ^>=2.1,
                          unordered-containers ^>=0.2.15,
                          vector ^>=0.12.3 || ^>=0.13.0,
                          greskell,
                          greskell-core ^>=1.0.0,
                          scientific,
                          greskell-websocket,
                          safe-exceptions
  else
    buildable: False


flag server-behavior-test
  description: Tests about the behavior of Gremlin Server, rather than greskell.
               Note that this test clears the content of the Gremlin Server.
  default: False
  manual: True

test-suite server-behavior-test-suite
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ServerBehaviorTest.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  other-modules:        ServerTest.Common
  if flag(server-behavior-test)
    build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                          aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                          hspec ^>=2.9.1 || ^>=2.10.6 || ^>=2.11.9,
                          text ^>=1.2.3 || ^>=2.0.2 || ^>=2.1,
                          unordered-containers ^>=0.2.15,
                          vector ^>=0.12.3 || ^>=0.13.0,
                          greskell,
                          greskell-core ^>=1.0.0,
                          scientific,
                          greskell-websocket,
                          safe-exceptions
  else
    buildable: False


source-repository head
  type:                 git
  location:             https://github.com/debug-ito/greskell.git
