name:                   test-readme
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
-- license-file:           LICENSE
-- synopsis:               
-- description:            
-- category:               
cabal-version:          >= 1.10
build-type:             Simple
-- extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  exposed-modules:      Database.TinkerPop
  build-depends:        base >=4.9.0.0,
                        text,
                        aeson

test-suite readme-Greskell
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common Greskell"
  main-is:              README.lhs
  build-depends:        base, 
                        hspec,
                        greskell, greskell-core,
                        markdown-unlit,
                        text, unordered-containers, aeson, heredoc

test-suite readme-Binder
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common Binder" -fno-warn-unused-top-binds
  main-is:              README.lhs
  build-depends:        base, 
                        hspec,
                        greskell, greskell-core,
                        markdown-unlit,
                        text, unordered-containers, aeson, heredoc,
                        test-readme

test-suite readme-GTraversal
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common GTraversal" -fno-warn-type-defaults
  main-is:              README.lhs
  build-depends:        base, 
                        hspec,
                        greskell, greskell-core,
                        markdown-unlit,
                        text, unordered-containers, aeson, heredoc

test-suite readme-WalkType
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common WalkType" -fno-warn-unused-top-binds
  main-is:              README.lhs
  build-depends:        base, 
                        hspec,
                        greskell, greskell-core,
                        markdown-unlit,
                        text, unordered-containers, aeson, heredoc


test-suite readme-monomorphic
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common monomorphic" -fno-warn-unused-top-binds
  main-is:              README.lhs
  build-depends:        base, 
                        hspec,
                        greskell, greskell-core,
                        markdown-unlit,
                        text, unordered-containers, aeson, heredoc

test-suite readme-GraphSON
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common GraphSON" -fno-warn-unused-top-binds
  main-is:              README.lhs
  build-depends:        base, 
                        hspec,
                        greskell, greskell-core,
                        markdown-unlit,
                        text, unordered-containers, aeson, heredoc

test-suite readme-own_types
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common own_types" -fno-warn-unused-top-binds -fno-warn-type-defaults
  main-is:              README.lhs
  build-depends:        base, 
                        hspec,
                        greskell, greskell-core,
                        markdown-unlit,
                        text, unordered-containers, aeson, heredoc


source-repository head
  type:                 git
--  location:             
