name:                   test-readme
version:                0.1.0.1
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               test README
description:            test README. Longer.
category:               Test
cabal-version:          2.0
build-type:             Simple
-- extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

-- library
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   ghc-options:          -Wall -fno-warn-unused-imports
--   build-depends:        base >=4.9.0.0 && <4.12,
--                         text,
--                         aeson

-- Dummy target to make cabal-install (run by travis) happy.
executable test-readme-dummy
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports
  build-depends:        base >=4.9.0.0 && <5.0


test-suite readme-Greskell
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common Greskell"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base,
                        hspec,
                        greskell, greskell-core,
                        text, unordered-containers, aeson

test-suite readme-Binder
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common Binder" -fno-warn-unused-top-binds
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base,
                        hspec,
                        greskell, greskell-core,
                        text, unordered-containers, aeson

test-suite readme-submit
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common submit" -fno-warn-unused-top-binds
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base,
                        hspec,
                        greskell, greskell-core,
                        text, unordered-containers, aeson,
                        greskell-websocket,
                        safe-exceptions


test-suite readme-GTraversal
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common GTraversal" -fno-warn-type-defaults
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base,
                        hspec,
                        greskell, greskell-core,
                        text, unordered-containers, aeson

test-suite readme-WalkType
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common WalkType" -fno-warn-unused-top-binds
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base,
                        hspec,
                        greskell, greskell-core,
                        text, unordered-containers, aeson,
                        greskell-websocket


test-suite readme-monomorphic
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common monomorphic" -fno-warn-unused-top-binds
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base,
                        hspec,
                        greskell, greskell-core,
                        text, unordered-containers, aeson

test-suite readme-own_types2
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common own_types2" -fno-warn-unused-top-binds -fno-warn-type-defaults
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base,
                        hspec,
                        greskell, greskell-core,
                        text, unordered-containers, aeson

test-suite readme-graph_io
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common graph_io" -fno-warn-unused-top-binds -fno-warn-type-defaults
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base,
                        hspec,
                        greskell, greskell-core,
                        text, unordered-containers, aeson,
                        greskell-websocket,
                        safe-exceptions,
                        hspec-need-env

